--- a/src/css/services.module.css
+++ b/src/css/services.module.css
@@ -8,6 +8,9 @@
 .service-title {
   text-align: center;
 }
+.service-description {
+  white-space: pre-wrap;
+}
 
 /*  Small devices (landscape phones) */
 @media screen and (min-width: 300px) and (max-width: 600px) {
